--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -1,5 +1,19 @@
 {
   "name": "@cube-creator/core-api",
   "version": "0.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "commander": "^6.1.0",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-permissions": "^1.3.3",
+    "jwks-rsa": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/commander": "^2.12.2",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.8",
+    "@types/express-jwt": "^0.0.42"
+  }
 }
