--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@zazuko/cube-creator",
   "private": true,
   "scripts": {
-    "lint": "eslint . --ext .ts,.vue,.tsx"
+    "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore"
   },
   "workspaces": [
     "ui",
@@ -20,7 +20,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^2.0.4",
     "standard": "^14.3.4",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
 }
