--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .DS_Store
 node_modules
-/dist
-
+/ui/dist
 
 # local env files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
@@ -21,5 +21,3 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-
-.env
