--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "apis/*",
     "packages/*"
   ],
-  "dependencies": {
+  "devDependencies": {
     "@tpluscode/eslint-config": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
