--- a/ui/package.json
+++ b/ui/package.json
@@ -14,10 +14,13 @@
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "buefy": "^0.9.2",
     "core-js": "^3.6.5",
+    "oidc-client": "^1.10.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0",
+    "vuex-oidc": "^3.9.7"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -28,6 +31,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-vuex": "^4.5.4",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.0.2",
