--- a/.local.env
+++ b/.local.env
@@ -1,9 +1,17 @@
 NODE_ENV=development
 
+# OIDC config
+AUTH_ISSUER=https://auth.cube-creator.lndo.site
+AUTH_AUDIENCE=cube-creator
+AUTH_JWKS_URI=http://dex:5556/keys
+
+# Core API
 API_CORE_BASE=https://cube-creator.lndo.site/
 
+# Vue UI app
 UI_BASE=https://app.cube-creator.lndo.site/
 
+# SPARQL endpoints
 STORE_QUERY_ENDPOINT=http://store:3030/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://store:3030/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
