--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "buefy": "^0.9.2",
     "core-js": "^3.6.5",
-    "oidc-client": "^1.10.1",
+    "oidc-client": "^1.11.0-beta.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
