--- a/.local.env
+++ b/.local.env
@@ -1,14 +1,18 @@
 NODE_ENV=development
 
+# Core cube API
 API_CORE_BASE=https://cube-creator.lndo.site/
-VUE_APP_API_URL=https://cube-creator.lndo.site/
 
+# Vue UI app
+VUE_APP_API_URL=https://cube-creator.lndo.site/
 UI_BASE=https://app.cube-creator.lndo.site/
 
+# SPARQL endpoints
 STORE_QUERY_ENDPOINT=http://store:3030/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://store:3030/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
 
-AUTH_AUDIENCE=https://datacube.zazukoians.org/
+# OIDC config
+AUTH_AUDIENCE=cube-creator
 AUTH_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
 AUTH_CLIENT_ID=cube-creator
