--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -8,12 +8,14 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
-    "jwks-rsa": "^1.9.0"
+    "jwks-rsa": "^1.9.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
-    "@types/express-jwt": "^0.0.42"
+    "@types/express-jwt": "^0.0.42",
+    "@types/node-fetch": "^2.5.7"
   }
 }
