--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -6,19 +6,31 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@hydrofoil/labyrinth": "^0.1.2",
+    "@rdfjs/parser-n3": "^1.1.4",
+    "@tpluscode/rdf-string": "^0.2.18",
+    "@tpluscode/rdf-ns-builders": "^0.4.0",
     "commander": "^6.1.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
+    "hydra-box": "zazuko/hydra-box#load-request-access",
     "jwks-rsa": "^1.9.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "rdf-ext": "^1.3.0",
+    "sparql-http-client": "^2.2.2",
+    "string-to-stream": "^3.0.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
-    "@types/node-fetch": "^2.5.7"
+    "@types/node-fetch": "^2.5.7",
+    "@types/rdf-ext": "^1.3.8",
+    "@types/rdf-js": "^4.0.0",
+    "@types/rdfjs__parser-n3": "^1.1.2",
+    "@types/sparql-http-client": "^2"
   }
 }
