--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -37,6 +37,9 @@ jobs:
             TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
           elif [ "${{ github.event_name }}" = "push" ]; then
             TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+            if [ "$VERSION" = "edge" ]; then
+              TAGS="$TAGS,${DOCKER_IMAGE}:edge-sha-${GITHUB_SHA::8}"
+            fi
           fi
           echo ::set-output name=version::${VERSION}
           echo ::set-output name=tags::${TAGS}
@@ -102,6 +105,9 @@ jobs:
             TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
           elif [ "${{ github.event_name }}" = "push" ]; then
             TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+            if [ "$VERSION" = "edge" ]; then
+              TAGS="$TAGS,${DOCKER_IMAGE}:edge-sha-${GITHUB_SHA::8}"
+            fi
           fi
           echo ::set-output name=version::${VERSION}
           echo ::set-output name=tags::${TAGS}
