--- a/.editorconfig
+++ b/.editorconfig
@@ -3,3 +3,16 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[{*.nq,*.nt,*.trig,*.ttl}]
+indent_size = 2
+max_line_length = 500
+tab_width = 2
+ij_continuation_indent_size = 4
+ij_turtle_keep_indents_on_empty_lines = false
+ij_turtle_keep_line_breaks = true
+ij_turtle_space_after_comma = true
+ij_turtle_space_after_for_semicolon = true
+ij_turtle_space_before_comma = false
+ij_turtle_space_before_for_semicolon = false
+ij_turtle_wrap_long_lines = false
