--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "alcaeus": "1.0.0-beta.15",
     "buefy": "^0.9.2",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.1",
