feat: rename cubes to projects and add to entrypoint

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,3 +12,25 @@ jobs:
           node-version: 13
       - run: yarn install --ci
       - run: yarn lint
+
+  analyse:
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - name: Install lando
+        run: sh .ci/install-lando.sh
+      - name: Start site
+        run: sh .ci/start-lando.sh
+      - run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run analyser
+
+   e2e-tests:
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - name: Install lando
+        run: sh .ci/install-lando.sh
+      - name: Start site
+        run: sh .ci/start-lando.sh
+      - run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run e2e-tests
