--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
+    "http-errors": "^1.8.0",
     "hydra-box": "zazuko/hydra-box#load-request-access",
     "jwks-rsa": "^1.9.0",
     "node-fetch": "^2.6.1",
@@ -28,6 +29,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
+    "@types/http-errors": "^1.8.0",
     "@types/node-fetch": "^2.5.7",
     "@types/rdf-ext": "^1.3.8",
     "@types/rdf-js": "^4.0.0",
