--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,9 +19,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Install lando
-        run: sh .ci/install-lando.sh
+        run: sh e2e-tests/install-lando.sh
       - name: Start site
-        run: sh .ci/start-lando.sh
+        run: sh e2e-tests/start-lando.sh
       - run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run analyser
 
   e2e-tests:
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Install lando
-        run: sh .ci/install-lando.sh
+        run: sh e2e-tests/install-lando.sh
       - name: Start site
-        run: sh .ci/start-lando.sh
+        run: sh e2e-tests/start-lando.sh
       - run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run e2e-tests
