--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,24 +13,19 @@ jobs:
       - run: yarn install --ci
       - run: yarn lint
 
-  analyse:
-    runs-on: [ubuntu-latest]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - name: Install lando
-        run: sh e2e-tests/install-lando.sh
-      - name: Start site
-        run: sh e2e-tests/start-lando.sh
-      - run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run analyser
-
   e2e-tests:
     runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+        with:
+          node-version: 13
+      - run: yarn install --ci
       - name: Install lando
         run: sh e2e-tests/install-lando.sh
       - name: Start site
         run: sh e2e-tests/start-lando.sh
       - run: docker-compose -f docker-compose.yml -f docker-compose.posix.yml run e2e-tests
+      - name: logs on fail
+        if: ${{ failure() }}
+        run: lando logs -s core
