--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,16 @@ name: CI
 on: [push, pull_request]
 
 jobs:
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1.4.2
+        with:
+          node-version: 13
+      - run: yarn install --ci
+      - run: yarn test
+
   lint:
     runs-on: ubuntu-latest
     steps:
