--- a/.lando.yml
+++ b/.lando.yml
@@ -13,6 +13,7 @@ services:
       ports:
         - '45671:45671'
       environment:
+        TS_NODE_TRANSPILE_ONLY: "true"
         TS_NODE_PROJECT: apis/core/tsconfig.json
         DEBUG: creator*,hydra*,hydra-box*,labyrinth*
     moreHttpPorts:
