--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -7,10 +7,15 @@
   },
   "dependencies": {
     "@cube-creator/core": "*",
-    "@hydrofoil/labyrinth": "^0.1.2",
+    "@hydrofoil/labyrinth": "^0.1.4",
+    "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
+    "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
-    "@tpluscode/rdf-ns-builders": "^0.4.0",
+    "@rdfjs/term-map": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.18",
+    "@tpluscode/rdf-ns-builders": "^0.4.0",
+    "@tpluscode/sparql-builder": "^0.3.9",
+    "clownface": "^1.0.0",
     "commander": "^6.1.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
@@ -20,22 +25,41 @@
     "http-errors": "^1.8.0",
     "hydra-box": "zazuko/hydra-box#load-request-access",
     "jwks-rsa": "^1.9.0",
+    "middleware-async": "^1.2.7",
     "node-fetch": "^2.6.1",
     "rdf-ext": "^1.3.0",
+    "rdf-validate-shacl": "^0.2.3",
+    "rdf-transform-triple-to-quad": "^1.0.2",
+    "url-slugify": "^1.0.6",
     "sparql-http-client": "^2.2.2",
     "string-to-stream": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/register": "^7.11.5",
+    "@types/absolute-url": "^1.2.0",
+    "@types/chai": "^4.2.12",
+    "@types/clownface": "^1.0.0",
     "@types/commander": "^2.12.2",
     "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
     "@types/http-errors": "^1.8.0",
+    "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/rdf-ext": "^1.3.8",
     "@types/rdf-js": "^4.0.0",
+    "@types/rdf-transform-triple-to-quad": "^1.0.0",
+    "@types/rdfjs__express-handler": "^1.1.1",
     "@types/rdfjs__parser-n3": "^1.1.2",
-    "@types/sparql-http-client": "^2"
+    "@types/rdfjs__term-map": "^1.0.0",
+    "@types/sparql-http-client": "^2",
+    "@types/supertest": "^2.0.10",
+    "@types/url-slugify": "^1.0.0",
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3",
+    "supertest": "^4.0.2"
   }
 }
