--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@zazuko/cube-creator",
   "private": true,
   "scripts": {
-    "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore"
+    "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore",
+    "test": "mocha **/*.test.ts"
   },
   "workspaces": [
     "ui",
@@ -13,6 +14,7 @@
     "@tpluscode/eslint-config": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.8.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
@@ -24,5 +26,16 @@
     "standard": "^14.3.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
+  },
+  "resolutions": {
+    "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times"
+  },
+  "mocha": {
+    "watch-files": [
+      "./**/*.ts"
+    ],
+    "require": [
+      "mocha-setup.js"
+    ]
   }
 }
