--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,5 +4,8 @@
   "version": "0.0.0",
   "dependencies": {
     "@rdfjs/namespace": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/rdf-js": "^4.0.0"
   }
 }
