refactor(ui): do not show entire API URLs in browser

--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "^2.0.0",
-    "alcaeus": "1.0.0-beta.15",
+    "@tpluscode/rdfine": "^0.5.6",
+    "alcaeus": "1.0.0-beta.18",
     "buefy": "^0.9.2",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.1",
