chore: replace types with freshly baked types package

--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -41,6 +41,7 @@
     "@babel/register": "^7.11.5",
     "@types/absolute-url": "^1.2.0",
     "@types/chai": "^4.2.12",
+    "@types/chai-snapshot-matcher": "^1.0.0",
     "@types/sinon-chai": "^3.2.4",
     "@types/clownface": "^1.0.0",
     "@types/commander": "^2.12.2",
