--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -12,9 +12,10 @@
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
-    "@tpluscode/rdf-string": "^0.2.18",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
+    "@tpluscode/rdf-string": "^0.2.18",
     "@tpluscode/sparql-builder": "^0.3.9",
+    "aws-sdk": "^2.758.0",
     "clownface": "^1.0.0",
     "commander": "^6.1.0",
     "merge-stream": "^2.0.0",
@@ -25,15 +26,16 @@
     "express-jwt-permissions": "^1.3.3",
     "http-errors": "^1.8.0",
     "hydra-box": "zazuko/hydra-box#load-request-access",
+    "isstream": "^0.1.2",
     "jwks-rsa": "^1.9.0",
     "middleware-async": "^1.2.7",
     "node-fetch": "^2.6.1",
     "rdf-ext": "^1.3.0",
-    "rdf-validate-shacl": "^0.2.3",
     "rdf-transform-triple-to-quad": "^1.0.2",
-    "url-slugify": "^1.0.6",
+    "rdf-validate-shacl": "^0.2.3",
     "sparql-http-client": "^2.2.2",
-    "string-to-stream": "^3.0.1"
+    "string-to-stream": "^3.0.1",
+    "url-slugify": "^1.0.6"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.11.5",
@@ -51,6 +53,7 @@
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
     "@types/http-errors": "^1.8.0",
+    "@types/isstream": "^0.1.0",
     "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/rdf-ext": "^1.3.8",
