chore(docker): have some logs by default

--- a/.lando.yml
+++ b/.lando.yml
@@ -15,6 +15,7 @@ services:
       environment:
         TS_NODE_TRANSPILE_ONLY: "true"
         TS_NODE_PROJECT: apis/core/tsconfig.json
+        # This should be kept in sync with api.Dockerfile
         DEBUG: creator*,hydra*,hydra-box*,labyrinth*
     moreHttpPorts:
       - 45671
