--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,7 +17,7 @@ server {
   index index.html index.html;
 
   location / {
-    try_files $uri /app/index.html =404;
+    try_files $uri /index.html =404;
   }
 
   ## Proxy requests to "/auth" and "/api" to api-server.
