--- a/.local.env
+++ b/.local.env
@@ -19,3 +19,7 @@ AUTH_CLIENT_ID=cube-creator
 VUE_APP_AUTH_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
 VUE_APP_AUTH_CLIENT_ID=cube-creator
 VUE_APP_API_CORE_BASE=https://cube-creator.lndo.site/
+
+# S3 config
+AWS_S3_ENDPOINT=https://s3.cube-creator.lndo.site/
+AWS_S3_BUCKET=cube-creator
