feat: add minio container to lando for s3

--- a/.local.env
+++ b/.local.env
@@ -16,3 +16,7 @@ STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
 AUTH_AUDIENCE=cube-creator
 AUTH_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
 AUTH_CLIENT_ID=cube-creator
+
+# S3 config
+AWS_S3_ENDPOINT=https://s3.cube-creator.lndo.site/
+AWS_S3_BUCKET=cube-creator
