--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -18,8 +18,9 @@
     "aws-sdk": "^2.758.0",
     "clownface": "^1.0.0",
     "commander": "^6.1.0",
-    "merge-stream": "^2.0.0",
     "cors": "^2.8.5",
+    "csv-parse": "^4.12.0",
+    "csv-sniffer": "^0.1.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
@@ -28,6 +29,7 @@
     "hydra-box": "zazuko/hydra-box#load-request-access",
     "isstream": "^0.1.2",
     "jwks-rsa": "^1.9.0",
+    "merge-stream": "^2.0.0",
     "middleware-async": "^1.2.7",
     "node-fetch": "^2.6.1",
     "rdf-ext": "^1.3.0",
@@ -44,16 +46,15 @@
     "@types/absolute-url": "^1.2.0",
     "@types/chai": "^4.2.12",
     "@types/chai-snapshot-matcher": "^1.0.0",
-    "@types/sinon-chai": "^3.2.4",
     "@types/clownface": "^1.0.0",
     "@types/commander": "^2.12.2",
-    "@types/merge-stream": "^1.1.2",
     "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
     "@types/http-errors": "^1.8.0",
     "@types/isstream": "^0.1.0",
+    "@types/merge-stream": "^1.1.2",
     "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/rdf-ext": "^1.3.8",
@@ -63,6 +64,7 @@
     "@types/rdfjs__parser-n3": "^1.1.2",
     "@types/rdfjs__term-map": "^1.0.0",
     "@types/sinon": "^9.0.5",
+    "@types/sinon-chai": "^3.2.4",
     "@types/sparql-http-client": "^2",
     "@types/supertest": "^2.0.10",
     "@types/url-slugify": "^1.0.0",
