--- a/.lando.yml
+++ b/.lando.yml
@@ -37,13 +37,13 @@ services:
         - ./fuseki/config.ttl:/data/fuseki/config/config.ttl
   s3:
     type: compose
-    ssl: true
-    services: 
+    ssl: false
+    services:
       image: minio/minio
       ports:
         - '9000:9000'
       command: usr/bin/docker-entrypoint.sh server /data
-      environment: 
+      environment:
         MINIO_ACCESS_KEY: minio
         MINIO_SECRET_KEY: password
       volumes:
@@ -55,5 +55,5 @@ proxy:
     - cube-creator.lndo.site:45670
   ui:
     - app.cube-creator.lndo.site
-  s3: 
+  s3:
     - s3.cube-creator.lndo.site:9000
