--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@tpluscode/rdfine": "^0.5.9",
     "alcaeus": "1.0.0-RC.0",
     "buefy": "^0.9.2",
+    "bulma-quickview": "^2.0.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.2",
     "vue": "^2.6.11",
