--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -15,9 +15,11 @@
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.18",
     "@tpluscode/sparql-builder": "^0.3.9",
+    "@types/content-disposition": "^0.5.3",
     "aws-sdk": "^2.758.0",
     "clownface": "^1.0.0",
     "commander": "^6.1.0",
+    "content-disposition": "^0.5.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.12.0",
     "csv-sniffer": "^0.1.1",
