--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve-local": "nodenv --env ../.local.env --exec 'vue-cli-service serve'",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
@@ -40,6 +41,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^6.0.0",
     "@vue/test-utils": "^1.1.0",
+    "node-env-run": "^4.0.2",
     "typescript": "^4.0.3",
     "vue-template-compiler": "^2.6.11"
   },
