--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -70,6 +70,7 @@
     "@types/sinon-chai": "^3.2.4",
     "@types/sparql-http-client": "^2",
     "@types/supertest": "^2.0.10",
+    "@types/type-is": "^1.6.3",
     "@types/url-slugify": "^1.0.0",
     "chai": "^4.2.0",
     "chai-snapshot-matcher": "^1.0.6",
