--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -28,7 +28,7 @@
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
     "http-errors": "^1.8.0",
-    "hydra-box": "zazuko/hydra-box#load-request-access",
+    "hydra-box": "zazuko/hydra-box#api-handler-errors",
     "isstream": "^0.1.2",
     "jwks-rsa": "^1.9.0",
     "merge-stream": "^2.0.0",
@@ -39,7 +39,6 @@
     "rdf-validate-shacl": "^0.2.3",
     "sparql-http-client": "^2.2.2",
     "string-to-stream": "^3.0.1",
-    "type-is": "^1.6.18",
     "url-slugify": "^1.0.6"
   },
   "devDependencies": {
@@ -70,7 +69,6 @@
     "@types/sinon-chai": "^3.2.4",
     "@types/sparql-http-client": "^2",
     "@types/supertest": "^2.0.10",
-    "@types/type-is": "^1.6.3",
     "@types/url-slugify": "^1.0.0",
     "chai": "^4.2.0",
     "chai-snapshot-matcher": "^1.0.6",
