--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,8 @@
     "@vue/eslint-config-typescript": "^6.0.0",
     "@vue/test-utils": "^1.1.0",
     "node-env-run": "^4.0.2",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "typescript": "^4.0.3",
     "vue-template-compiler": "^2.6.11"
   },
