--- a/ui/package.json
+++ b/ui/package.json
@@ -14,21 +14,30 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@hydrofoil/shaperone-wc": "^0.1.0",
+    "@hydrofoil/shaperone-wc-material": "^0.1.2",
+    "@rdf-esm/data-model": "^0.5.3",
+    "@rdf-esm/dataset": "^0.5.1",
+    "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.9",
-    "alcaeus": "1.0.0-RC.0",
+    "alcaeus": "1.0.0-RC.1",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
+    "vue-custom-element": "^3.2.14",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.4.6",
     "vuex": "^3.4.0",
     "vuex-oidc": "^3.10.0"
   },
   "devDependencies": {
+    "@types/clownface": "^1",
     "@types/jest": "^26.0.14",
+    "@types/rdf-js": "^4",
+    "@types/rdfjs__dataset": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "@vue/cli-plugin-babel": "~4.5.7",
@@ -42,6 +51,7 @@
     "@vue/eslint-config-typescript": "^6.0.0",
     "@vue/test-utils": "^1.1.0",
     "node-env-run": "^4.0.2",
+    "raw-loader": "^4.0.2",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "typescript": "^4.0.3",
