feat: add access request link to error response

--- a/.local.env
+++ b/.local.env
@@ -9,10 +9,11 @@ STORE_QUERY_ENDPOINT=http://store:3030/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://store:3030/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
 
-# OIDC config
+# AuthN config
 AUTH_AUDIENCE=cube-creator
 AUTH_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
 AUTH_CLIENT_ID=cube-creator
+AUTH_ACCESS_REQUEST=https://sts001-r.bar.admin.ch/_pep/accessRequest?appl=BAR-Pipelines
 
 # VUE_APP_ prefix to expose them to the ui/public/index.html template.
 # Keep in sync with the variables above
