--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@cube-creator/core": "*",
-    "@hydrofoil/labyrinth": "^0.1.9",
+    "@hydrofoil/labyrinth": "^0.1.11",
     "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
@@ -28,6 +28,8 @@
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
     "http-errors": "^1.8.0",
+    "http-problem-details": "^0.1.5",
+    "http-problem-details-mapper": "^0.1.6",
     "hydra-box": "zazuko/hydra-box#api-handler-errors",
     "isstream": "^0.1.2",
     "jwks-rsa": "^1.9.0",
