refactor: use URIs for project source kind selection
also removes magic strings for shape URIs

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "@rdfjs/namespace": "^1.1.0"
+    "@rdf-esm/namespace": "^0.5.1"
   },
   "devDependencies": {
     "@types/rdf-js": "^4.0.0"
