--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore",
-    "test": "mocha **/*.test.ts"
+    "test": "mocha --recursive apis/*/test/*.test.ts"
   },
   "workspaces": [
     "ui",
