--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "@cube-creator/core": "*",
+    "@cube-creator/model": "*",
     "@hydrofoil/labyrinth": "^0.1.11",
     "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
+    "@rdfine/csvw": "^0.5.1",
+    "@tpluscode/rdfine": "^0.5.11",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.20",
     "@tpluscode/sparql-builder": "^0.3.9",
