--- a/cli/package.json
+++ b/cli/package.json
@@ -4,9 +4,9 @@
   "description": "Runs a pipeline to create an RDF data cube",
   "main": "index.js",
   "scripts": {
-    "postinstall": "mkdir -p input; mkdir -p output",
-    "transform": "dotenv -- yarn start",
-    "start": "ts-node index.ts transform --from s3 --project \"$TRANSFORM_PROJECT\" --debug --enable-buffer-monitor -v s3endpoint=$S3_ENDPOINT -v s3bucket=$S3_BUCKET -v graph-store-endpoint=$GRAPH_STORE_ENDPOINT -v graph-store-user=$GRAPH_STORE_USER -v graph-store-password=$GRAPH_STORE_PASSWORD -v graph=$TRANSFORM_GRAPH --auth-issuer $AUTH_ISSUER --auth-client-id $AUTH_CLIENT_ID --auth-client-secret $AUTH_CLIENT_SECRET",
+    "postinstall": "mkdir -p output",
+    "transform": "dotenv -e ../.local.env -- yarn start",
+    "start": "ts-node index.ts transform --project \"$TRANSFORM_PROJECT\" --debug --enable-buffer-monitor -v s3endpoint=$S3_ENDPOINT -v s3bucket=$S3_BUCKET -v graph-store-endpoint=$GRAPH_STORE_ENDPOINT -v graph-store-user=$GRAPH_STORE_USER -v graph-store-password=$GRAPH_STORE_PASSWORD -v graph=$TRANSFORM_GRAPH --auth-issuer $AUTH_ISSUER --auth-client-id $AUTH_CLIENT_ID --auth-client-secret $AUTH_CLIENT_SECRET",
     "build": "tsc"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
     "@rdfjs/namespace": "^1.1.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.9",
-    "alcaeus": "^1.0.0-RC.1",
+    "alcaeus": "^1.0.0-RC.2",
     "aws-sdk": "^2.559.0",
     "barnard59": "^0.1.0",
     "barnard59-base": "^0.0.4",
@@ -28,6 +28,7 @@
     "duplex-to": "^1.0.0",
     "get-stream": "^5.1.0",
     "isstream": "^0.1.2",
+    "node-fetch": "^2.6.1",
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
@@ -36,6 +37,10 @@
     "through2-reduce": "1.1.1"
   },
   "devDependencies": {
+    "@cube-creator/core": "*",
+    "@tpluscode/rdf-ns-builders": "^0.4",
+    "@tpluscode/rdf-string": "^0.2.20",
+    "@tpluscode/sparql-builder": "^0.3.9",
     "@types/clownface": "^1",
     "@types/debug": "^4.1.5",
     "@types/isstream": "^0.1.0",
@@ -47,7 +52,10 @@
     "@types/rdfjs__namespace": "^1.1.1",
     "@types/rdfjs__sink-map": "^1.0.0",
     "@types/readable-stream": "^2.3.9",
-    "dotenv-cli": "^3.1.0"
+    "chai": "^4.2.0",
+    "dotenv-cli": "^3.1.0",
+    "mocha": "^8.1.3",
+    "sparql-http-client": "^2.2.2"
   },
   "repository": {
     "type": "git",
