--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,20 @@ jobs:
       - run: yarn install --ci
       - run: yarn test
 
+  cli-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1.4.2
+        with:
+          node-version: 14
+      - name: Install lando
+        run: sh e2e-tests/install-lando.sh
+      - name: Start site
+        run: sh e2e-tests/start-lando.sh
+      - run: yarn install --ci
+      - run: yarn test:cli
+
   lint:
     runs-on: ubuntu-latest
     steps:
