--- a/babel.config.json
+++ b/babel.config.json
@@ -9,5 +9,16 @@
       }
     ],
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "decoratorsBeforeExport": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-class-properties"
+    ]
   ]
 }
