feat: add color picker component

--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "oidc-client": "^1.11.0-beta.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
+    "vue-color": "^2.7.1",
     "vue-custom-element": "^3.2.14",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.4.7",
@@ -37,6 +38,7 @@
     "@types/jest": "^26.0.14",
     "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.4",
+    "@types/vue-color": "^2.4.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "@vue/cli-plugin-babel": "~4.5.8",
