--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -9,6 +9,7 @@
     "@rdfine/rdfs": "^0.5.0",
     "@rdfine/schema": "^0.5.2",
     "@tpluscode/rdfine": "^0.5.10",
-    "@tpluscode/rdf-ns-builders": "^0.4.0"
+    "@tpluscode/rdf-ns-builders": "^0.4.0",
+    "@types/rdf-js": "^4.0.0"
   }
 }
