test: end-to-end execution of pipeline transformation

--- a/cli/.test.env
+++ b/cli/.test.env
@@ -1,1 +1,5 @@
-AUTH_RUNNER_CLIENT_ID=cube-creator-runner
+TRANSFORM_PROJECT=https://cube-creator.lndo.site/cube/cli-test
+AUTH_CLIENT_ID=cube-creator-runner
+GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
+GRAPH_STORE_USER=admin
+GRAPH_STORE_PASSWORD=password
