--- a/cli/package.json
+++ b/cli/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "mkdir -p output",
-    "transform": "dotenv -e .env -e .test.env -e ../.local.env -- yarn start",
-    "start": "ts-node index.ts transform --project \"$TRANSFORM_PROJECT\" --debug --enable-buffer-monitor",
+    "transform": "dotenv -e ./.env -e ./.test.env -e ../.local.env -- yarn start",
+    "start": "ts-node index.ts transform --project \"$TRANSFORM_PROJECT\" --to stdout --debug --enable-buffer-monitor",
     "build": "tsc"
   },
   "dependencies": {
