refactor: tweak env settings and local run command

--- a/cli/.test.env
+++ b/cli/.test.env
@@ -1,5 +1,10 @@
-TRANSFORM_PROJECT=https://cube-creator.lndo.site/cube/cli-test
-AUTH_CLIENT_ID=cube-creator-runner
+TRANSFORM_PROJECT=https://cube-creator.lndo.site/project/cli-test
+
+AUTH_RUNNER_CLIENT_ID=cube-creator-runner
+AUTH_RUNNER_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
+
 GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
 GRAPH_STORE_USER=admin
 GRAPH_STORE_PASSWORD=password
+
+NODE_TLS_REJECT_UNAUTHORIZED=0
