--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,8 @@ jobs:
 
   cli-test:
     runs-on: ubuntu-latest
+    env:
+      AUTH_RUNNER_CLIENT_SECRET: ${{ secrets.AUTH_RUNNER_CLIENT_SECRET }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1.4.2
