--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -9,16 +9,17 @@
     "@cube-creator/core": "*",
     "@cube-creator/model": "*",
     "@hydrofoil/labyrinth": "^0.1.11",
+    "@rdfine/csvw": "^0.5.1",
     "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
-    "@rdfine/csvw": "^0.5.1",
-    "@tpluscode/rdfine": "^0.5.11",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.20",
+    "@tpluscode/rdfine": "^0.5.11",
     "@tpluscode/sparql-builder": "^0.3.9",
     "@types/content-disposition": "^0.5.3",
+    "alcaeus": "1.0.0-RC.4",
     "aws-sdk": "^2.758.0",
     "clownface": "^1.0.0",
     "commander": "^6.1.0",
