--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@hydrofoil/shaperone-wc": "^0.1.1",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/dataset": "^0.5.1",
+    "@rdfine/shacl": "^0.5.1",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.10",
     "alcaeus": "1.0.0-RC.4",
