--- a/cli/package.json
+++ b/cli/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "postinstall": "mkdir -p output",
     "transform": "dotenv -e ./.env -e ./.test.env -- yarn start",
-    "start": "ts-node index.ts transform --project \"$TRANSFORM_PROJECT\" --to filesystem --debug --enable-buffer-monitor",
+    "start": "ts-node index.ts transform --project \"$TRANSFORM_PROJECT\" --to filesystem --debug",
     "build": "tsc"
   },
   "dependencies": {
+    "@cube-creator/core": "*",
     "@cube-creator/model": "*",
     "@rdfine/csvw": "^0.5.1",
     "@rdfjs/fetch-lite": "^2.0.1",
@@ -33,6 +34,7 @@
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
     "readable-stream": "^3.6.0",
+    "ssz-data": "StatistikStadtZuerich/ld-data#barnard59",
     "string-to-stream": "^3.0.1",
     "through2-reduce": "1.1.1"
   },
