refactor: use rdfine for project model

--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -10,6 +10,7 @@
     "@cube-creator/model": "*",
     "@hydrofoil/labyrinth": "^0.1.12",
     "@rdfine/csvw": "^0.5.1",
+    "@rdfine/hydra": "^0.5.1",
     "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
