--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@cube-creator/core": "*",
+    "@rdf-esm/data-model": "^0.5.3",
     "@rdfine/csvw": "^0.5.1",
     "@rdfine/hydra": "^0.5.4",
     "@rdfine/rdfs": "^0.5.0",
