--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -11,6 +11,7 @@
     "@hydrofoil/labyrinth": "^0.1.12",
     "@rdfine/csvw": "^0.5.1",
     "@rdfine/hydra": "^0.5.1",
+    "@rdfine/schema": "^0.5.2",
     "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
@@ -56,6 +57,7 @@
     "@babel/register": "^7.11.5",
     "@types/absolute-url": "^1.2.0",
     "@types/chai": "^4.2.13",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/chai-snapshot-matcher": "^1.0.0",
     "@types/clownface": "^1.0.3",
     "@types/commander": "^2.12.2",
@@ -80,6 +82,7 @@
     "@types/supertest": "^2.0.10",
     "@types/url-slugify": "^1.0.0",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-snapshot-matcher": "^1.0.6",
     "mocha": "^8.1.3",
     "sinon": "^9.0.3",
