refactor: prepare support of different pipeline types

--- a/.local.env
+++ b/.local.env
@@ -28,4 +28,5 @@ AWS_ACCESS_KEY_ID=minio
 AWS_SECRET_ACCESS_KEY=password
 
 # Pipelines
+PIPELINE_TYPE=local # local | github | gitlab
 PIPELINE_URI=http://pipeline:45680
