feat: github action to run pipeline

--- a/cli/package.json
+++ b/cli/package.json
@@ -13,10 +13,11 @@
     "@cube-creator/core": "*",
     "@cube-creator/model": "*",
     "@rdfine/csvw": "^0.5.1",
+    "@rdfine/schema": "^0.5.1",
     "@rdfjs/fetch-lite": "^2.0.1",
     "@rdfjs/namespace": "^1.1.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
-    "@tpluscode/rdfine": "^0.5.9",
+    "@tpluscode/rdfine": "^0.5.15",
     "alcaeus": "^1.0.0-RC.2",
     "aws-sdk": "^2.559.0",
     "barnard59": "^0.1.0",
