--- a/ui/package.json
+++ b/ui/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve-local": "nodenv --env ../.local.env --exec 'vue-cli-service serve'",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
+    "serve-local": "nodenv --env ../.local.env --exec 'vue-cli-service serve'"
   },
   "dependencies": {
     "@cube-creator/core": "*",
@@ -37,6 +38,7 @@
     "vuex-oidc": "^3.10.1"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.4.10",
     "@types/clownface": "^1.0.3",
     "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.4",
@@ -44,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "@vue/cli-plugin-babel": "~4.5.8",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.8",
     "@vue/cli-plugin-eslint": "~4.5.8",
     "@vue/cli-plugin-router": "~4.5.8",
     "@vue/cli-plugin-typescript": "~4.5.8",
