chore: upgrade UI deps

--- a/ui/package.json
+++ b/ui/package.json
@@ -18,7 +18,7 @@
     "@hydrofoil/shaperone-wc": "^0.1.4",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/dataset": "^0.5.1",
-    "@rdfine/shacl": "^0.5.1",
+    "@rdfine/shacl": "^0.6.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.10",
     "alcaeus": "1.0.0-RC.4",
@@ -55,6 +55,7 @@
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.1.0",
+    "eslint": "^7.11.0",
     "node-env-run": "^4.0.2",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
