ci: multiline syntax no working?

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,8 +24,4 @@ jobs:
         with:
           node-version: 14
       - run: yarn install --ci
-      - run: yarn ts-node cli/index.ts transform \
-          --job "${{ github.event.inputs.job }}" \
-          --execution-url "https://${{ github.repository }}/actions/runs/${{ github.run_id }}" \
-          --to graph-store \
-          --debug
+      - run: yarn ts-node cli/index.ts transform --job "${{ github.event.inputs.job }}" --execution-url "https://${{ github.repository }}/actions/runs/${{ github.run_id }}" --to graph-store --debug
