--- a/.local.env
+++ b/.local.env
@@ -22,11 +22,11 @@ VUE_APP_AUTH_CLIENT_ID=cube-creator
 VUE_APP_API_CORE_BASE=https://cube-creator.lndo.site/
 
 # S3 config
-AWS_S3_ENDPOINT=http://s3:9000
+AWS_S3_ENDPOINT=http://s3.cube-creator.lndo.site:9000
 AWS_S3_BUCKET=cube-creator
 AWS_ACCESS_KEY_ID=minio
 AWS_SECRET_ACCESS_KEY=password
 
 # Pipelines
 PIPELINE_TYPE=local # local | github | gitlab
-PIPELINE_URI=http://pipeline:45680
+PIPELINE_URI=http://pipeline.cube-creator.lndo.site
