--- a/cli/.test.env
+++ b/cli/.test.env
@@ -3,7 +3,7 @@ TRANSFORM_JOB=https://cube-creator.lndo.site/project/ubd/csv-mapping/jobs/test-j
 AUTH_RUNNER_CLIENT_ID=cube-creator-runner
 AUTH_RUNNER_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
 
-GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site:3030/cube-creator/data
+GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
 GRAPH_STORE_USER=admin
 GRAPH_STORE_PASSWORD=password
 
