build: update rdfine packages

--- a/cli/package.json
+++ b/cli/package.json
@@ -12,15 +12,15 @@
   "dependencies": {
     "@cube-creator/core": "*",
     "@cube-creator/model": "*",
-    "@rdfine/csvw": "^0.5.1",
-    "@rdfine/schema": "^0.5.1",
+    "@rdfine/csvw": "^0.6.0",
+    "@rdfine/schema": "^0.6.0",
     "@rdfjs/fetch-lite": "^2.0.1",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
     "@tpluscode/rdf-ns-builders": "^0.4",
-    "@tpluscode/rdfine": "^0.5.15",
-    "alcaeus": "^1.0.0-RC.2",
+    "@tpluscode/rdfine": "^0.5.16",
+    "alcaeus": "^1.0.1",
     "aws-sdk": "^2.559.0",
     "barnard59": "^0.1.0",
     "barnard59-base": "^0.0.4",
