--- a/ui/package.json
+++ b/ui/package.json
@@ -16,13 +16,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@hydrofoil/shaperone-wc": "^0.2.1",
+    "@hydrofoil/shaperone-wc": "^0.2.2",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/dataset": "^0.5.1",
-    "@rdfine/shacl": "^0.6.0",
+    "@rdfine/shacl": "^0.7.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
-    "@tpluscode/rdfine": "^0.5.10",
-    "alcaeus": "1.0.0-RC.4",
+    "@tpluscode/rdfine": "^0.5.16",
+    "alcaeus": "1.0.1",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
     "cookie-storage": "^6.1.0",
