ci: extract common prep script which runs before docker steps

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -8,42 +8,22 @@ on:
       - "v*.*.*"
   pull_request:
 
+env:
+  GITHUB_EVENT_NAME: ${{ github.event.number }}
+  DEFUALT_BRANCH: ${{ github.event.repository.default_branch }}
+
 jobs:
   build-api:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE: zazuko/cube-creator-api
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Prepare
         id: prep
-        run: |
-          DOCKER_IMAGE=zazuko/cube-creator-api
-          VERSION=noop
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-            if [ "${{ github.event.repository.default_branch }}" = "$VERSION" ]; then
-              VERSION=edge
-            fi
-          elif [[ $GITHUB_REF == refs/pull/* ]]; then
-            VERSION=pr-${{ github.event.number }}
-          fi
-          TAGS="${DOCKER_IMAGE}:${VERSION}"
-          if [[ $VERSION =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            MINOR=${VERSION%.*}
-            MAJOR=${MINOR%.*}
-            TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
-          elif [ "${{ github.event_name }}" = "push" ]; then
-            TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
-            if [ "$VERSION" = "edge" ]; then
-              TAGS="$TAGS,${DOCKER_IMAGE}:edge-sha-${GITHUB_SHA::8}"
-            fi
-          fi
-          echo ::set-output name=version::${VERSION}
-          echo ::set-output name=tags::${TAGS}
-          echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+        run: .github/workflows/docker.sh
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -80,38 +60,14 @@ jobs:
 
   build-app:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE: zazuko/cube-creator-app
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Prepare
         id: prep
-        run: |
-          DOCKER_IMAGE=zazuko/cube-creator-app
-          VERSION=noop
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-            if [ "${{ github.event.repository.default_branch }}" = "$VERSION" ]; then
-              VERSION=edge
-            fi
-          elif [[ $GITHUB_REF == refs/pull/* ]]; then
-            VERSION=pr-${{ github.event.number }}
-          fi
-          TAGS="${DOCKER_IMAGE}:${VERSION}"
-          if [[ $VERSION =~ ^v[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            MINOR=${VERSION%.*}
-            MAJOR=${MINOR%.*}
-            TAGS="$TAGS,${DOCKER_IMAGE}:${MINOR},${DOCKER_IMAGE}:${MAJOR},${DOCKER_IMAGE}:latest"
-          elif [ "${{ github.event_name }}" = "push" ]; then
-            TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
-            if [ "$VERSION" = "edge" ]; then
-              TAGS="$TAGS,${DOCKER_IMAGE}:edge-sha-${GITHUB_SHA::8}"
-            fi
-          fi
-          echo ::set-output name=version::${VERSION}
-          echo ::set-output name=tags::${TAGS}
-          echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+        run: .github/workflows/docker.sh
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
