--- a/cli/package.json
+++ b/cli/package.json
@@ -35,6 +35,7 @@
     "duplex-to": "^1.0.0",
     "express": "^4.17.1",
     "get-stream": "^5.1.0",
+    "glob": "^7.1.6",
     "is-stream": "^2.0.0",
     "middleware-async": "^1.2.7",
     "node-fetch": "^2.6.1",
@@ -52,8 +53,14 @@
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdf-string": "^0.2.21",
     "@tpluscode/sparql-builder": "^0.3.10",
+    "@types/body-parser": "^1.19.0",
+    "@types/chai": "^4.2.13",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/clownface": "^1.0.3",
+    "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.9",
+    "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
     "@types/once": "^1.4.0",
     "@types/rdf-ext": "^1.3.5",
@@ -62,6 +69,7 @@
     "@types/rdfjs__namespace": "^1.1.1",
     "@types/rdfjs__sink-map": "^1.0.0",
     "@types/readable-stream": "^2.3.9",
+    "@types/sparql-http-client": "^2",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
