fix: disambiguate operation supported by both hydra:Resource and hydra:Collection

--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "@cube-creator/core": "*",
     "@cube-creator/model": "*",
-    "@hydrofoil/labyrinth": "^0.1.13",
+    "@hydrofoil/labyrinth": "^0.1.14",
     "@rdfine/csvw": "^0.5.1",
     "@rdfine/hydra": "^0.5.1",
     "@rdfine/schema": "^0.5.2",
-    "@rdfjs/express-handler": "tpluscode/express-handler#dataset-multiple-times",
+    "@rdfjs/express-handler": "^1.2.1",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
@@ -40,7 +40,7 @@
     "http-errors": "^1.8.0",
     "http-problem-details": "^0.1.5",
     "http-problem-details-mapper": "^0.1.6",
-    "hydra-box": "zazuko/hydra-box#property-operations-responses",
+    "hydra-box": "zazuko/hydra-box",
     "is-stream": "^2",
     "jwks-rsa": "^1.9.0",
     "middleware-async": "^1.2.7",
