--- a/cli/.test.env
+++ b/cli/.test.env
@@ -7,4 +7,8 @@ GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
 GRAPH_STORE_USER=admin
 GRAPH_STORE_PASSWORD=password
 
+PUBLISH_GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
+PUBLISH_GRAPH_STORE_USER=admin
+PUBLISH_GRAPH_STORE_PASSWORD=password
+
 NODE_TLS_REJECT_UNAUTHORIZED=0
